<resources>
    <string name="app_name">DreamProject</string>
    <string name="nav">标题</string>
    <string name="nav_1">首页</string>
    <string name="nav_2">首页</string>
    <string name="nav_3">我的</string>
    <string name="more">更多</string>
    <string name="back">上一页</string>
    <string name="sample_str">文字</string>
    <string name="peronal_text">作品</string>
    <string name="peronal_text1">产品</string>
    <string name="peronal_text2">照片</string>
    <string name="peronal_text3">动态</string>
    <string name="peronal_text4">资料</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="look">看过</string>
    <string name="editdata">编辑资料</string>
    <string name="chat">聊天</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="startpassword">请输入原来的密码</string>
    <string name="newpassword">请输入新的密码</string>
    <string name="new1password">请再输入一次的密码</string>
    <string name="statelogin">登录后再操作</string>
</resources>
