<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_tran">

    <TextView
        android:id="@+id/webview_bottom_text1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/follow"
        android:textColor="@color/White"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/webview_bottom_text2"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/comment"
        android:textColor="@color/White"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/webview_bottom_text3"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/White"
        android:textSize="16sp" />


</LinearLayout>
