<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/other_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/other_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ListView
            android:id="@+id/other_listview1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@color/White"></ListView>

        <ListView
            android:id="@+id/other_listview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="2"></ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/other_edit1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:gravity="center_vertical"
            android:hint="@string/startpassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/other_edit2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:gravity="center_vertical"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/other_edit3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:gravity="center_vertical"
            android:hint="@string/new1password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
